--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
     "onnxruntime-node": "^1.20.1",
     "sharp": "^0.33.5",
     "vercel": "^39.2.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^9.2.1",
+    "node-loader": "^2.1.0",
+    "size-limit": "^11.1.6",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4"
   }
 }
